@@ -1,5 +1,4 @@
-// System include(s):
-#include <cmath>
+// $Id$
 
 // EDM includes(s):
 #include "xAODCore/AuxStoreAccessorMacros.h"
@@ -8,19 +7,24 @@
 #include "xAODTrigL1Calo/versions/CMMCPHits_v1.h"
 
 namespace xAOD{  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , int , crate , setCrate )  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , int , dataID , setDataID )  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , int , peak , setPeak )  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , std::vector<unsigned int> , hitsVec0 , setHitsVec0 )  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , std::vector<unsigned int> , hitsVec1 , setHitsVec1 )  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , std::vector<int> , errorVec0 , setErrorVec0 )  
-  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1 , std::vector<int> , errorVec1 , setErrorVec1 )
-  
+
   CMMCPHits_v1::CMMCPHits_v1() :
     SG::AuxElement()
   {        
   }
-  
+
+  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1, int, crate, setCrate )
+  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1, int, dataID, setDataID )
+  AUXSTORE_PRIMITIVE_SETTER_AND_GETTER( CMMCPHits_v1, int, peak, setPeak )
+  AUXSTORE_OBJECT_SETTER_AND_GETTER( CMMCPHits_v1, std::vector<unsigned int>,
+                                     hitsVec0, setHitsVec0 )  
+  AUXSTORE_OBJECT_SETTER_AND_GETTER( CMMCPHits_v1, std::vector<unsigned int>,
+                                     hitsVec1, setHitsVec1 )  
+  AUXSTORE_OBJECT_SETTER_AND_GETTER( CMMCPHits_v1, std::vector<int>,
+                                     errorVec0, setErrorVec0 )  
+  AUXSTORE_OBJECT_SETTER_AND_GETTER( CMMCPHits_v1, std::vector<int>,
+                                     errorVec1, setErrorVec1 )
+
   void CMMCPHits_v1::addHits(const std::vector<unsigned int>& hits0,
                              const std::vector<unsigned int>& hits1,
                              const std::vector<int>& error0,
@@ -31,26 +35,28 @@ namespace xAOD{
     this->setErrorVec0( error0 );
     this->setErrorVec1( error1 );
   }
-    
-          
-  unsigned int CMMCPHits_v1::HitWord0() const
+
+  unsigned int CMMCPHits_v1::hitWord0() const
   {
+    // Remember that at(...) is slower than [...]. But in return it throws
+    // a kind-of-useful exception when using a wrong index. Question is if
+    // it can happen here...
     return this->hitsVec0().at( this->peak() ); 
   }
-  
-  unsigned int CMMCPHits_v1::HitWord1() const
+
+  unsigned int CMMCPHits_v1::hitWord1() const
   {
     return this->hitsVec1().at( this->peak() );
   }
-  
-  int CMMCPHits_v1::Error0() const
+
+  int CMMCPHits_v1::error0() const
   {
     return this->errorVec0().at( this->peak() ); 
   }
-  
-  int CMMCPHits_v1::Error1() const
+
+  int CMMCPHits_v1::error1() const
   {
     return this->errorVec1().at( this->peak() );
   }  
-  
+
 } // namespace xAOD
