@@ -1,6 +1,9 @@
+// Dear emacs, this is -*- c++ -*-
+// $Id$
 #ifndef XAODTRIGL1CALO_VERSIONS_CMMCPHITS_V1_H
 #define XAODTRIGL1CALO_VERSIONS_CMMCPHITS_V1_H
 
+// EDM include(s):
 #include "AthLinks/ElementLink.h"
 #include "AthContainers/AuxElement.h"
 
@@ -13,45 +16,66 @@ namespace xAOD {
    ///
    /// @author John Morris <john.morris@cern.ch>
    ///
-   /// $Date: 2013-12-10
+   /// $Revision$
+   /// $Date$
    ///
    class CMMCPHits_v1 : public SG::AuxElement{
    public:
      // Default constructor
      CMMCPHits_v1();
-     
+
+     /// Some description for the property
      int crate() const;
+     /// Description of what is being set here
      void setCrate(int);
-     
+
+     /// Some description for the property
      int dataID() const;
+     /// Description of what is being set here
      void setDataID(int);
-     
+
+     /// Some description for the property
      int peak() const;
+     /// Description of what is being set here
      void setPeak(int);
-     
-     std::vector<unsigned int> hitsVec0() const;
-     void setHitsVec0(std::vector<unsigned int>);
-     
-     std::vector<unsigned int> hitsVec1() const;
-     void setHitsVec1(std::vector<unsigned int>);  
-     
-     std::vector<int> errorVec0() const;
-     void setErrorVec0(std::vector<int>);
-     
-     std::vector<int> errorVec1() const;
-     void setErrorVec1(std::vector<int>);        
-     
+
+     /// Some description for the property
+     const std::vector<unsigned int>& hitsVec0() const;
+     /// Description of what is being set here
+     void setHitsVec0(const std::vector<unsigned int>&);
+
+     /// Some description for the property
+     const std::vector<unsigned int>& hitsVec1() const;
+     /// Description of what is being set here
+     void setHitsVec1(const std::vector<unsigned int>&);  
+
+     /// Some description for the property
+     const std::vector<int>& errorVec0() const;
+     /// Description of what is being set here
+     void setErrorVec0(const std::vector<int>&);
+
+     /// Some description for the property
+     const std::vector<int>& errorVec1() const;
+     /// Description of what is being set here
+     void setErrorVec1(const std::vector<int>&);        
+
+     /// Some description for this function
      void addHits(const std::vector<unsigned int>& hits0,
                   const std::vector<unsigned int>& hits1,
                   const std::vector<int>& error0,
                   const std::vector<int>& error1); 
-     
-     unsigned int HitWord0() const;
-     unsigned int HitWord1() const;
-     int Error0()  const;
-     int Error1()  const;     
-          
-   };
+
+     /// Some description for this function
+     unsigned int hitWord0() const;
+     /// Some description for this function
+     unsigned int hitWord1() const;
+     /// Some description for this function
+     int error0() const;
+     /// Some description for this function
+     int error1() const;
+
+   }; // class CMMCPHits_v1
+
 } // namespace xAOD
 
 // Set up a CLID for the class:
